tests/error/enum_errors/enum_mutual_recursive.py
from guppylang.decorator import guppy

TODO
